@@ -21,6 +21,7 @@ import java.io.InputStream;
 import java.lang.reflect.Array;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -738,9 +739,9 @@ public class MoquiStart {
                 if (loadWebInf && jarEntry == null) jarEntry = jarFile.getJarEntry(webInfResourceName);
                 if (jarEntry != null) {
                     try {
-                        URL jarLocation = jarLocationByJarName.get(jarFile.getName());
-                        if (jarLocation == null) jarLocation = new File(jarFile.getName()).toURI().toURL();
-                        URL resourceUrl = new URL("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName());
+                        String jarFileName = jarFile.getName();
+                        if (jarFileName.contains("\\")) jarFileName = jarFileName.replace('\\', '/');
+                        URL resourceUrl = URI.create("jar:file:" + jarFileName + "!/" + jarEntry).toURL();
                         resourceCache.put(resourceName, resourceUrl);
                         return resourceUrl;
                     } catch (MalformedURLException e) {
@@ -765,9 +766,9 @@ public class MoquiStart {
                 if (loadWebInf && jarEntry == null) jarEntry = jarFile.getJarEntry(webInfResourceName);
                 if (jarEntry != null) {
                     try {
-                        URL jarLocation = jarLocationByJarName.get(jarFile.getName());
-                        if (jarLocation == null) jarLocation = new File(jarFile.getName()).toURI().toURL();
-                        urlList.add(new URL("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName()));
+                        String jarFileName = jarFile.getName();
+                        if (jarFileName.contains("\\")) jarFileName = jarFileName.replace('\\', '/');
+                        urlList.add(URI.create("jar:file:" + jarFileName + "!/" + jarEntry).toURL());
                     } catch (MalformedURLException e) {
                         System.out.println("Error making URL for [" + resourceName + "] in jar [" + jarFile + "] in war file [" + wrapperUrl + "]: " + e.toString());
                     }
@@ -866,7 +867,7 @@ public class MoquiStart {
             String seal = mf.getMainAttributes().getValue(Attributes.Name.SEALED);
             if (seal == null) return null;
             try {
-                return new URL(seal);
+                return URI.create(seal).toURL();
             } catch (MalformedURLException e) {
                 return null;
             }
